--- a/Tests/Editor/Settings.Tests.Editor.asmdef
+++ b/Tests/Editor/Settings.Tests.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Settings.Editor.Tests",
+    "name": "Settings.Tests.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
