--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Settings",
   "version": "0.0.7-preview-7",
   "unity": "2021.3",
-  "hideInEditor": true,
+  "hideInEditor": false,
   "samples": [],
   "author": {
     "name": ""
